--- a/mack.html
+++ b/mack.html
@@ -109,8 +109,8 @@
         <main class="uk-background-muted">
             <!-- Main Content -->
             <div>
-                <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden">
-                    <div class="uk-background-bottom-left uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 40;min:400">
+                <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden uk-height-large">
+                    <div class="uk-background-bottom-left  uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 50;min:500">
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <div class="uk-container uk-container-large">
                     <div class="">
                         <div class="uk-margin-auto uk-text-center@s">
-                            <h1 class="fw-600">Evolving a Digital Experience</h1>
+                            <h1 class="fw-600">Evolving a digital survey experience</h1>
                             <h2 class="uk-margin-large-bottom fs-20">Mack Trucks Survey Project (2015 Original vs. Modern Redesign)</h2>
                         </div>
 
@@ -127,7 +127,7 @@
                             <div>
                                 <ul class="uk-list uk-margin-remove" uk-accordion>
 
-                                    <li class="uk-open uk-background-default uk-border-rounded-large uk-padding-small uk-margin-small">
+                                    <li class="uk-open">
                                         <a class="uk-accordion-title" href>
                                             <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
                                         </a>
@@ -137,42 +137,48 @@
                                             <p>Presented below as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution and growth as a designer and my deeper understanding of modern digital product design. This comparison directly illustrates how I now approach similar challenges with an expanded skillset in areas like design thinking and creating more delightful, functional design systems, my ability to apply modern design thinking to significantly improve a user experience, and my commitment to creating high-quality, user-centric digital products.</p></div>
                                     </li>
 
-                                    <li class="uk-background-default uk-border-rounded-large uk-padding-small uk-margin-small">
+                                    <li>
                                         <a class="uk-accordion-title" href>
                                             <h3 class="uk-margin-remove fs-20 fw-600">About the 2015 Original</h3>
                                         </a>
                                         <div class="uk-accordion-content">
                                             <p>While the original initiative was primarily focused on marketing goals, execution of the project involved significant underlying user experience challenges, including designing an intuitive user flow for survey completion, structuring information effectively, and ensuring a seamless experience across devices via responsive design.</p>
 
-                                            <div class="uk-accordion-content">
-                                                <p>As the lead designer for the original survey site, I was responsible for:</p>
+                                            <p>As the lead designer for the original survey site, I was responsible for:</p>
 
-                                                <div class="uk-background-muted uk-padding-small uk-border-rounded-medium uk-margin-small-bottom">
-                                                    <h4 class="fs-18 fw-500 uk-margin-small in"><i class="fa-solid fa-swatchbook uk-margin-small-right fs-14"></i>Design (UI/UX/Branding)</h4>
-                                                    <ul class="uk-list uk-list-hyphen uk-margin-small fs-14">
-                                                        <li class="uk-margin-xsmall">Translating the printed survey into an intuitive digital experience</li>
-                                                        <li class="uk-margin-xsmall">Defining an online design language that was aligned to the campaign's print materials</li>
-                                                        <li class="uk-margin-xsmall">Presenting my designs to cross-functional stakeholders</li>
-                                                    </ul>
+                                            <div class="">
+                                                <div class="uk-child-width-1-3@s uk-grid-small" uk-grid>
+                                                    <div>
+                                                        <div class="uk-background-muted uk-padding-small uk-border-rounded-medium uk-margin-small-bottom">
+
+                                                            <h4 class="fs-16 fw-600 uk-margin-small uk-text-primary"><i class="fa-solid fa-wand-magic-sparkles uk-margin-small-right fs-18"></i>Design (UI/UX/Branding)</h4>
+                                                            <ul class="uk-list uk-list-square uk-margin-small fs-14">
+                                                                <li class="uk-margin-small">Translating the printed survey into an intuitive digital experience</li>
+                                                                <li class="uk-margin-small">Defining an online design language that was aligned to the campaign's print materials</li>
+                                                                <li class="uk-margin-small">Presenting my designs to cross-functional stakeholders</li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                    <div>
+                                                        <div class="uk-background-muted uk-padding-small uk-border-rounded-medium uk-margin-small-bottom">
+                                                            <h4 class="fs-16 fw-600 uk-margin-small uk-text-primary"><i class="fa-solid fa-code uk-margin-small-right fs-18"></i>Execution</h4>
+                                                            <ul class="uk-list uk-list-square uk-margin-small fs-14">
+                                                                <li class="uk-margin-small">Converting my mockups into a fast and seamless experience by writing minimal, optimized HTML/CSS code</li>
+                                                                <li class="uk-margin-small">Collaborating with the back-end team during the code phase to provide them with front-end code to which they could easily incorporate survey functionality</li>
+                                                            </ul>
+                                                        </div>
+                                                    </div><div>
+                                                    <div class="uk-background-muted uk-padding-small uk-border-rounded-medium uk-margin-small-bottom">
+                                                        <h4 class="fs-16 fw-600 uk-margin-small uk-text-primary"><i class="fa-solid fa-list-check uk-margin-small-right fs-18"></i>Quality Assurance</h4>
+                                                        <ul class="uk-list uk-list-square uk-margin-small-top fs-14">
+                                                            <li class="uk-margin-small">Conducting a multi-stage quality control process to ensure accuracy</li>
+                                                            <li class="uk-margin-small">Reviewing user flow</li>
+                                                            <li class="uk-margin-small">Testing functionality and device compatibility</li>
+                                                        </ul>
+                                                    </div>
+                                                    </div>
                                                 </div>
 
-
-                                                <div class="uk-background-muted uk-padding-small uk-border-rounded-medium uk-margin-small-bottom">
-                                                    <h4 class="fs-18 fw-500 uk-margin-small in"><i class="fa-solid fa-code uk-margin-small-right fs-14"></i>Execution</h4>
-                                                    <ul class="uk-list uk-list-hyphen uk-margin-small fs-14">
-                                                        <li class="uk-margin-xsmall">Converting my mockups into a fast and seamless experience by writing minimal, optimized HTML/CSS code</li>
-                                                        <li class="uk-margin-xsmall">Collaborating with the back-end team during the code phase to provide them with front-end code to which they could easily incorporate survey functionality</li>
-                                                    </ul>
-                                                </div>
-
-                                                <div class="uk-background-muted uk-padding-small uk-border-rounded-medium uk-margin-small-bottom">
-                                                    <h4 class="fs-18 fw-500 uk-margin-small in"><i class="fa-solid fa-list-check uk-margin-small-right fs-14"></i>Quality Assurance</h4>
-                                                    <ul class="uk-list uk-list-hyphen uk-margin-small-top fs-14">
-                                                        <li class="uk-margin-xsmall">Conducting a multi-stage quality control process to ensure accuracy</li>
-                                                        <li class="uk-margin-xsmall">Reviewing user flow</li>
-                                                        <li class="uk-margin-xsmall">Testing functionality and device compatibility</li>
-                                                    </ul>
-                                                </div>
                                                 <p>The original campaign was highly successful, generating over 1,000 responders (qualified leads), with a significant percentage expressing interest in learning more or test driving a truck.</p>
                                                 <p>This success, even within the context of 2015 design practices, highlights the impact of effective user flow and clear information architecture in meeting business objectives.</p>
                                             </div>
@@ -190,7 +196,7 @@
 
 
 
-            <div class="uk-section uk-background-primary uk-light" uk-height-viewport="expand:true">
+            <div class="uk-section uk-background-primary uk-light " uk-height-viewport="expand:true">
 
                 <div class="uk-container uk-container-xlarge" uk-scrollspy="cls: uk-animation-scale-up; repeat: true;target:img">
 
@@ -217,7 +223,7 @@
                                         <a href="img/mack/login-2015.png" data-caption="Original">
                                             <img src="img/mack/login-2015.png" alt="Original"  />
                                         </a>
-                                        <p class="uk-text-bold uk-text-center">Original</p>
+                                        <p class="uk-text-bold uk-text-center uk-dark ">Original</p>
                                     </div>
                                     <div>
                                         <a href="img/mack/login-2025.webp" data-caption="Redesign">
@@ -227,7 +233,6 @@
 
                                     </div>
                                 </div>
-
                             </div>
 
                             <div class="uk-section uk-container uk-container-expand" id="info">
