--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <!-- Main Content -->
-            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
+            <div class="uk-section" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
                     <div class="uk-text-left">
                         <h2 class="fs-18 fw-500 uk-text-uppercase">// Current Projects</h2>
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
+            <div class="uk-section" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
                     <div class="uk-text-left">
                         <h2 class="fs-18 fw-500 uk-text-uppercase">// Past Work</h2>
