--- a/mack.html
+++ b/mack.html
@@ -109,8 +109,8 @@
         <main class="uk-background-muted">
             <!-- Main Content -->
             <div>
-                <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden uk-height-large">
-                    <div class="uk-background-bottom-left  uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 50;min:500">
+                <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden uk-height-max-large">
+                    <div class="uk-background-bottom-left  uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 53;min:300">
                     </div>
                 </div>
             </div>
