--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="uk-container uk-container-large">
                 <div class="uk-grid">
                     <div class="uk-width-expand">
-                        <p class="fs-12">&copy; Brian French 2025. All rights reserved.</p>
+                        <p class="fs-12">&copy; 2025 Brian French&emsp;All rights reserved.</p>
                     </div>
                     <div class="uk-width-auto">
                         <a href="#" uk-totop uk-scroll class="fs-12"></a>
