--- a/mack.html
+++ b/mack.html
@@ -126,7 +126,6 @@
                         <div class="uk-container uk-container-small ">
                             <div>
                                 <ul class="uk-list uk-margin-remove" uk-accordion>
-
                                     <li class="uk-open">
                                         <a class="uk-accordion-title" href>
                                             <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
@@ -296,7 +295,7 @@
             <div class="uk-container">
                 <div class="uk-grid">
                     <div class="uk-width-expand">
-                        <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
+                        <p class="fs-12">&copy; 2025 Brian French&emsp;All rights reserved.</p>
                     </div>
                     <div class="uk-width-auto">
                         <a href="#" uk-totop uk-scroll class="fs-12"></a>
