--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                             <a href>Current Projects<span uk-drop-parent-icon></span></a>
                                             <div class="uk-dropdown">
                                                 <ul class="uk-nav uk-dropdown-nav">
-                                                    <li><a href="mack">Mack Trucks</a></li>
+                                                    <li><a href="./mack">Mack Trucks</a></li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -78,7 +78,7 @@
                                         <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true">
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
                                                 <li class="uk-nav-header fw-500">Current Projects</li>
-                                                <li><a href="mack">Mack Trucks</a></li>
+                                                <li><a href="./mack">Mack Trucks</a></li>
 
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">
                                                     Past Work (Coming soon)
@@ -135,7 +135,7 @@
                     <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light">
                         <div id="mack-survey" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
                             <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                                <a href="mack">
+                                <a href="./mack">
                                     <div class="uk-overflow-hidden uk-border-rounded-large" uk-scrollspy-class="uk-animation-scale-up">
                                         <img src="img/mack/login-2025.webp" />
                                     </div>
@@ -156,7 +156,7 @@
                                         </p>
                                     </div>
 
-                                    <a href="mack" class="uk-button pulse warm uk-border-pill">See more</a>
+                                    <a href="./mack" class="uk-button pulse warm uk-border-pill">See more</a>
                                 </div>
                             </div>
                         </div>
