--- a/mack.html
+++ b/mack.html
@@ -48,7 +48,7 @@
                                         <a href>Current Projects<span uk-drop-parent-icon></span></a>
                                         <div class="uk-dropdown">
                                             <ul class="uk-nav uk-dropdown-nav">
-                                                <li><a href="./mack">Mack Trucks</a></li>
+                                                <li><a href="mack.html">Mack Trucks</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -74,7 +74,7 @@
                                         <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true">
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
                                                 <li class="uk-nav-header fw-500">Current Projects</li>
-                                                <li><a href="./mack">Mack Trucks</a></li>
+                                                <li><a href="mack.html">Mack Trucks</a></li>
 
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">
                                                     Past Work (Coming soon)
