--- a/mack.html
+++ b/mack.html
@@ -131,7 +131,7 @@
                                             <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
                                         </a>
                                         <div class="uk-accordion-content">
-                                            <p>In this project I revisit the original 2015 online survey fulfillment and reimagine how it could be improved using using modern user-centered design principles, UI/UX, interaction design, information architecture, contemporary visual design trends, and a stronger alignment with Mack's brand identity.</p>
+                                            <p>In this project I revisit the original 2015 online survey and reimagine how it could be improved using using modern user-centered design principles, UI/UX, interaction design, information architecture, contemporary visual design trends, and a stronger alignment with Mack's brand identity.</p>
 
                                             <p>Presented below as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution and growth as a designer and my deeper understanding of modern digital product design. This comparison directly illustrates how I now approach similar challenges with an expanded skillset in areas like design thinking and creating more delightful, functional design systems, my ability to apply modern design thinking to significantly improve a user experience, and my commitment to creating high-quality, user-centric digital products.</p></div>
                                     </li>
