--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         </header>
 
         <main class="uk-background-muted">
-            <div class="uk-container uk-container-large uk-section">
-                <div class="uk-grid uk-flex uk-flex-top" uk-grid>
+            <div class="uk-container uk-container-large">
+                <div class="uk-grid uk-flex uk-flex-top uk-margin-large-top" uk-grid>
                     <div class="uk-margin-auto uk-text-center@s">
-                        <h1 class="fs-36 fw-600">Senior marketing designer focused on craft, growth and strategy</h1>
-                        <div class="fs-18 in">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</div>
+                        <h1 class="fs-36 fw-600 uk-margin-left uk-margin-right">Senior marketing designer focused on craft, growth and strategy</h1>
+                        <div class="fs-18 fw-500 in uk-margin-left uk-margin-right">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</div>
                     </div>
 
                     <div class="uk-width-1-3 uk-width-1-5@s uk-width-1-5@m uk-hidden">
@@ -240,6 +240,7 @@
 
             <div class="uk-section uk-section-default">
                 <div class="uk-container uk-container-large">
+                    <div class="uk-margin-left uk-margin-right">
                     <div class="uk-text-left">
                         <h2 class="fs-18 fw-500 uk-text-uppercase">// How coworkers describe me</h2>
                         <hr />
@@ -289,6 +290,7 @@
                                 </blockquote>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
