--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
                         <div id="5w-insights" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
                             <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                                <div class="uk-overflow-hidden uk-border-rounded-large uk-padding uk-background-default" uk-scrollspy-class="uk-animation-scale-up">
+                                <div class="uk-overflow-hidden uk-border-rounded-large uk-background-default" uk-scrollspy-class="uk-animation-scale-up">
                                     <img src="img/5winsights/Booth-Mockup_2024.jpg" />
                                 </div>
                             </div>
