--- a/mack.html
+++ b/mack.html
@@ -118,9 +118,13 @@
             <div class="uk-section uk-section-small">
                 <div class="uk-container uk-container-large">
                     <div class="uk-margin-left uk-margin-right">
-                        <div class="uk-margin-auto uk-text-center@s">
-                            <h1 class="fw-600">Evolving a digital survey experience</h1>
-                            <h2 class="fw-500 uk-margin-large-bottom fs-18">Mack Trucks Survey Project (2015 Original vs. Modern Redesign)</h2>
+                        <div class="uk-margin-auto uk-text-center@s" uk-scrollspy="target:div;delay:75;repeat: true;">
+                            <div uk-scrollspy-class="uk-animation-slide-bottom-small">
+                                <h1 class="fw-600">Evolving a digital survey experience</h1>
+                            </div>
+                            <div uk-scrollspy-class="uk-animation-slide-bottom-small">
+                                <h2 class="fw-500 uk-margin-large-bottom fs-18">Mack Trucks Survey Project (2015 Original vs. Modern Redesign)</h2>
+                            </div>
                         </div>
 
                         <div class="uk-container uk-container-small ">
@@ -134,7 +138,7 @@
                                             <p>In this project I revisit the original 2015 online survey and reimagine how it could be improved using using modern user-centered design principles, UI/UX, interaction design, information architecture, contemporary visual design trends, and a stronger alignment with Mack's brand identity.</p>
 
                                             <p>Presented below as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution and growth as a designer and my deeper understanding of modern digital product design.</p>
-                                            
+
                                             <p>This comparison directly illustrates how I now approach similar challenges with an expanded skillset in areas like design thinking and creating more delightful, functional design systems, my ability to apply modern design thinking to significantly improve a user experience, and my commitment to creating high-quality, user-centric digital products.</p></div>
                                     </li>
 
