--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
                                     })(window,document,'script','dataLayer','GTM-WJNPDXXB');</script>
         <!-- End Google Tag Manager -->
-        
+
         <style type="text/css">
             :root {--direction: -1;}
         </style>
-        
+
     </head>
 
     <body>
@@ -47,24 +47,24 @@
                             </div>
 
                             <div class="uk-navbar-item uk-navbar-center uk-visible@s">
-                                    <ul class="uk-subnav uk-flex-center ">
-                                        <li>
-                                            <a href>Current Projects<span uk-drop-parent-icon></span></a>
-                                            <div class="uk-dropdown">
-                                                <ul class="uk-nav uk-dropdown-nav">
-                                                    <li><a href="mack.html">Mack Trucks</a></li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <a href>Past Work<span uk-drop-parent-icon></span></a>
-                                            <div class="uk-dropdown">
-                                                <ul class="uk-nav uk-dropdown-nav uk-list uk-list-large">
-                                                    <li class="">Coming Soon</li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                <ul class="uk-subnav uk-flex-center ">
+                                    <li>
+                                        <a href>Current Projects<span uk-drop-parent-icon></span></a>
+                                        <div class="uk-dropdown">
+                                            <ul class="uk-nav uk-dropdown-nav">
+                                                <li><a href="mack.html">Mack Trucks</a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a href>Past Work<span uk-drop-parent-icon></span></a>
+                                        <div class="uk-dropdown">
+                                            <ul class="uk-nav uk-dropdown-nav uk-list uk-list-large">
+                                                <li class="">Coming Soon</li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="uk-navbar-item uk-navbar-right uk-link-reset uk-visible@s">
                                 <a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn</a>
@@ -112,9 +112,13 @@
         <main class="uk-background-muted">
             <div class="uk-container uk-container-large">
                 <div class="uk-grid uk-flex uk-flex-top uk-margin-large-top" uk-grid>
-                    <div class="uk-margin-auto uk-text-center@s">
-                        <h1 class="fs-36 fw-600 uk-margin-left uk-margin-right">Senior marketing designer focused on craft, growth and strategy</h1>
-                        <div class="fs-18 fw-500 in uk-margin-left uk-margin-right">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</div>
+                    <div class="uk-margin-auto uk-text-center@s" uk-scrollspy="target:div;delay:75;repeat: true;">
+                        <div uk-scrollspy-class="uk-animation-slide-bottom-small">
+                            <h1 class="fs-36 fw-600 uk-margin-left uk-margin-right">Senior marketing designer focused on craft, growth and strategy</h1>
+                        </div>
+                        <div uk-scrollspy-class="uk-animation-slide-bottom-small">
+                            <h2 class="fs-18 fw-500 in uk-margin-left uk-margin-right">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</h2>
+                        </div>
                     </div>
 
                     <div class="uk-width-1-3 uk-width-1-5@s uk-width-1-5@m uk-hidden">
@@ -241,56 +245,56 @@
             <div class="uk-section uk-section-default">
                 <div class="uk-container uk-container-large">
                     <div class="uk-margin-left uk-margin-right">
-                    <div class="uk-text-left">
-                        <h2 class="fs-18 fw-500 uk-text-uppercase">// How coworkers describe me</h2>
-                        <hr />
-                    </div>
+                        <div class="uk-text-left">
+                            <h2 class="fs-18 fw-500 uk-text-uppercase">// How coworkers describe me</h2>
+                            <hr />
+                        </div>
 
-                    <div class="uk-flex uk-grid">
-                        <div class="uk-grid uk-grid-large uk-child-width-1-2@s uk-child-width-1-3@m fs-16" uk-grid="masonry: pack">
-                            <div>
-                                <blockquote>
-                                    <div>
-                                        <p>&ldquo;Brian is truly an outstanding employee in every way including his great attitude, dedication, willingness to do whatever is required to get the job done, his intelligence and his expertise.&rdquo;
-                                        </p>
-                                    </div>
-                                </blockquote>
-                            </div>
+                        <div class="uk-flex uk-grid">
+                            <div class="uk-grid uk-grid-large uk-child-width-1-2@s uk-child-width-1-3@m fs-16" uk-grid="masonry: pack">
+                                <div>
+                                    <blockquote>
+                                        <div>
+                                            <p>&ldquo;Brian is truly an outstanding employee in every way including his great attitude, dedication, willingness to do whatever is required to get the job done, his intelligence and his expertise.&rdquo;
+                                            </p>
+                                        </div>
+                                    </blockquote>
+                                </div>
 
-                            <div>
-                                <blockquote>
-                                    <div>
-                                        <p>&ldquo;He is an outstanding Creative Director and is skilled at all aspects of content development and implementation to include strategy development, graphic design, copywriting, production, campaign management, reporting and project management.&rdquo;</p>
-                                    </div>
-                                </blockquote>
-                            </div>
+                                <div>
+                                    <blockquote>
+                                        <div>
+                                            <p>&ldquo;He is an outstanding Creative Director and is skilled at all aspects of content development and implementation to include strategy development, graphic design, copywriting, production, campaign management, reporting and project management.&rdquo;</p>
+                                        </div>
+                                    </blockquote>
+                                </div>
 
-                            <div>
-                                <blockquote>
-                                    <div>
-                                        <p>&ldquo;He is the equivalent of a team of skilled professionals that can conceptualize, design, develop, implement, QC and execute complex campaigns across all channels, including Facebook, Instagram, SMS text, search, display, mobile, email, website and direct mail.&rdquo;</p>
-                                    </div>
-                                </blockquote>
-                            </div>
+                                <div>
+                                    <blockquote>
+                                        <div>
+                                            <p>&ldquo;He is the equivalent of a team of skilled professionals that can conceptualize, design, develop, implement, QC and execute complex campaigns across all channels, including Facebook, Instagram, SMS text, search, display, mobile, email, website and direct mail.&rdquo;</p>
+                                        </div>
+                                    </blockquote>
+                                </div>
 
-                            <div>
-                                <blockquote>
-                                    <div>
-                                        <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the
-                                            &lsquo;Go To&rsquo; man.&rdquo;</p>
-                                    </div>
-                                </blockquote>
-                            </div>
+                                <div>
+                                    <blockquote>
+                                        <div>
+                                            <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the
+                                                &lsquo;Go To&rsquo; man.&rdquo;</p>
+                                        </div>
+                                    </blockquote>
+                                </div>
 
-                            <div>
-                                <blockquote>
-                                    <div>
-                                        <p>&ldquo;Brian&rsquo;s skill at working productively in a high stress, deadline pending situation is unmatched. He is a true ASSET.&rdquo;</p>
-                                    </div>
-                                </blockquote>
+                                <div>
+                                    <blockquote>
+                                        <div>
+                                            <p>&ldquo;Brian&rsquo;s skill at working productively in a high stress, deadline pending situation is unmatched. He is a true ASSET.&rdquo;</p>
+                                        </div>
+                                    </blockquote>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
