--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     </div>
 
 
-                    <div class="uk-border-rounded-large ">
+                    <div class="uk-border-rounded-large uk-visible@s">
                         <div class="uk-grid-small uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
                             <div>
                                 <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
