--- a/index.html
+++ b/index.html
@@ -115,12 +115,6 @@
                             <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</h2>
                         </div>
                     </div>
-
-                    <div class="uk-width-1-3 uk-width-1-5@s uk-width-1-5@m uk-hidden">
-                        <div class="uk-margin">
-                            <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-large" />
-                        </div>
-                    </div>
                 </div>
             </div>
             <!-- Main Content -->
@@ -199,37 +193,43 @@
                     </div>
 
 
-                    <div class="uk-border-rounded-large uk-visible@s">
-                        <div class="uk-grid-small uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
+                    <div class="uk-border-rounded-large">
+                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
-                                    <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
-                                    <div><a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a></div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
-                                    <img src="img/BSA-SJAC.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
-                                    <div><a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a></div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
-                                    <img src="img/mack.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
-                                    <div>
-                                        <a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
+                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
+                                        <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
-                                    <img src="img/rategenius.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
-                                    <div>
-                                        <a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
+                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
+                                    <img src="img/BSA-SJAC.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" /></div>
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
+                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
+                                    <img src="img/mack.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
+                                </div>
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
+                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
+                                    <img src="img/rategenius.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+
                                 </div>
                             </div>
                         </div>
