--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
                                 <a href="/gd/" class="fw-500 warm">
-                                    <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
+                                    <img src="img/headshot.webp" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
                                     <span class="margin-small-right uk-width-auto">Brian French</span>&ensp;
                                 </a>
                             </div>
@@ -194,40 +194,52 @@
 
 
                     <div class="uk-border-rounded-large">
-                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
+                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target:div > div.uk-background-default">
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
-                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
-                                        <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                    <div>
+                                        <img src="img/aac.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
+                                    <hr />
+                                    <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen Campaign</p>
+                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">eBook, email &amp; landing page</p>
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
 
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
-                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
-                                    <img src="img/BSA-SJAC.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" /></div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                    <div>
+                                        <img src="img/bsa-sjac.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" /></div>
+                                    <hr />
+                                    <p class="uk-text-muted fw-600 uk-margin-remove">Fundraising Appeal</p>
+                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">Direct Mail Package</p>
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
-                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
-                                    <img src="img/mack.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
-                                </div>
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
-
-                                </div>
-                            </div>
-
-                            <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body uk-text-center uk-padding-remove-top">
-                                    <div class="uk-height-max-medium uk-overflow-hidden uk-flex uk-flex-middle">
-                                    <img src="img/rategenius.png" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                    <div>
+                                        <img src="img/mack.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
+                                    <hr />
+                                    <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen Survey</p>
+                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">Direct mail package, email &amp; survey website</p>
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                    <div>
+                                        <img src="img/rategenius.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
+                                    </div>
+                                    <hr />
+                                    <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen </p>
+                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">Multivariate Direct Mail</p>
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
 
                                 </div>
