--- a/index.html
+++ b/index.html
@@ -194,53 +194,65 @@
 
 
                     <div class="uk-border-rounded-large">
-                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target:div > div.uk-background-default">
+                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target: > div > div > .uk-card-body">
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                <div class="uk-card-default uk-card uk-padding-xsmall uk-border-rounded-large uk-box-shadow-remove">
                                     <div>
                                         <img src="img/aac.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
-                                    <hr />
-                                    <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen Campaign</p>
-                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">eBook, email &amp; landing page</p>
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
-
+                                    <div class="uk-card-body uk-padding-small">
+                                        <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen Campaign</p>
+                                        <p class="uk-text-muted in uk-margin-remove fs-14">eBook, email &amp; landing page</p>
+                                    </div>
+                                    <div class="uk-padding-small uk-padding-remove-top">
+                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                    </div>
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                <div class="uk-card-default uk-card uk-padding-xsmall uk-border-rounded-large uk-box-shadow-remove">
                                     <div>
-                                        <img src="img/bsa-sjac.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" /></div>
-                                    <hr />
-                                    <p class="uk-text-muted fw-600 uk-margin-remove">Fundraising Appeal</p>
-                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">Direct Mail Package</p>
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                        <img src="img/bsa-sjac.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
+                                    </div>
+                                    <div class="uk-card-body uk-padding-small">
+                                        <p class="uk-text-muted fw-600 uk-margin-remove">Fundraising Appeal</p>
+                                        <p class="uk-text-muted in uk-margin-remove fs-14">Direct Mail Package</p>
+                                    </div>
+                                    <div class="uk-padding-small uk-padding-remove-top">
+                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                    </div>
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                <div class="uk-card-default uk-card uk-padding-xsmall uk-border-rounded-large uk-box-shadow-remove">
                                     <div>
                                         <img src="img/mack.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
-                                    <hr />
-                                    <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen Survey</p>
-                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">Direct mail package, email &amp; survey website</p>
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                    <div class="uk-card-body uk-padding-small">
+                                        <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen Survey</p>
+                                        <p class="uk-text-muted in uk-margin-remove fs-14">Direct mail package, email &amp; survey website</p>
+                                    </div>
+                                    <div class="uk-padding-small uk-padding-remove-top">
+                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                    </div>
 
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-small uk-card-body">
+                                <div class="uk-card-default uk-card uk-padding-xsmall uk-border-rounded-large uk-box-shadow-remove">
                                     <div>
                                         <img src="img/rategenius.webp" class="uk-blend-luminosity uk-width-1-1 uk-width-1-1@s" />
                                     </div>
-                                    <hr />
-                                    <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen </p>
-                                    <p class="uk-text-muted in uk-margin-remove-top fs-14">Multivariate Direct Mail</p>
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                    <div class="uk-card-body uk-padding-small">
+                                        <p class="uk-text-muted fw-600 uk-margin-remove">Lead Gen </p>
+                                        <p class="uk-text-muted in uk-margin-remove fs-14">Multivariate Direct Mail</p>
+                                    </div>
+                                    <div class="uk-padding-small uk-padding-remove-top">
+                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                    </div>
 
                                 </div>
                             </div>
